# agy-acp

./: .gitignore  AGENTS.md  LICENSE-APACHE  LICENSE-MIT  README.md  fake_server.py  hellp.py  hellp_test.py  pyproject.toml  test_hellp_secrets.py
.agents/skills/magic-word/: SKILL.md
.github/workflows/: ci.yml  live-tests.yml
src/agy_acp/: AGENTS.md  __init__.py  __main__.py  agent.py  config.py  hooks.py  log.py  mcp.py  session.py  skills.py  tool_ui.py  tools.py
tests/: conftest.py  test_agent.py  test_hooks.py  test_logging.py  test_mcp.py  test_skills.py  test_tool_ui.py
