[project]
name = "agy-acp"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "agent-client-protocol>=0.10.1",
    "google-antigravity>=0.1.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    # https://github.com/googleapis/python-genai/issues/1640
    "ignore:'_UnionGenericAlias' is deprecated:DeprecationWarning",
]
