[project]
name = "agy-acp"
version = "0.1.0"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
requires-python = ">=3.14"
dependencies = [
    "agent-client-protocol>=0.10.1",
    "google-antigravity>=0.1.3",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "fastmcp>=3.4.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
filterwarnings = [
    # https://github.com/googleapis/python-genai/issues/1640
    "ignore:'_UnionGenericAlias' is deprecated:DeprecationWarning",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
